tests/lean/env_errors.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Assumed: x
env_errors.lean:3:0: error: set_opaque failed, 'x' is not a definition
before import
env_errors.lean:8: error: executing script
error: file 'tstblafoo.lean' not found in the LEAN_PATH
before load1
env_errors.lean:14: error: executing script
error: failed to open file 'tstblafoo.lean'
before load2
env_errors.lean:20: error: executing script
error: corrupted binary file
before load3
env_errors.lean:26: error: executing script
error: file 'fake2.olean' does not seem to be a valid object Lean file
